<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="StartShift_EndShift" Id="{d88f4f11-a395-41c3-85ed-0772e3abdb58}">
    <Declaration><![CDATA[TYPE StartShift_EndShift :	
STRUCT
	StartShift			: TIME_OF_DAY;
	EndShift			: TIME_OF_DAY;				
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>